syntax = "proto3";

package stats.message.interactions;

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.interactions";

message InteractionsCountRequestProto {
  repeated int64 event_id = 1;
}