syntax = "proto3";

package stats.message.recommended;

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.recommended";

message RecommendedEventProto {
  int64 event_id = 1;
  double score = 2;
}